# chat-helper

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  docker-compose.yaml  docker-compose.yml  pyproject.toml
src/: __main__.py  avatar.py  bot.py  color.py  parse_chat_name.py
tests/: test_parse_chat_name.py
