[tool.poetry]
name = "chat-helper"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
numpy = "^2.1.3"
pillow = "^11.0.0"
pytest = "^8.3.3"

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
