[project]
name = "chat-helper"
version = "0.1.0"
description = ""
requires-python = "~=3.12"
dependencies = [
    "aiogram>=3.14.0,<4",
    "numpy>=2.1.3,<3",
    "pillow>=11.0.0,<12",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "types-pillow>=10.2.0.20240822",
]

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
    "PLR",
]
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415"]
target-version = "py312"
