[project]
name = "chat-helper"
version = "0.1.0"
description = ""
authors = [{ name = "one-zero-eight" }]
urls = { homepage = "https://t.me/one_zero_eight" }
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "aiogram>=3.14.0",
    "aiohttp-socks>=0.10.2",
    "numpy>=2.1.3",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "types-pillow>=10.2.0.20240822",
]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "UP", "PL"]
lint.extend-ignore = ["PLC0415", "PLR"]
target-version = "py313"
